--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "familiar-magic",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Absurd"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react": "^17.0.27",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "main": "public/electron.js",
@@ -39,9 +43,15 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "concurrently": "^6.2.1",
     "electron": "^14.0.1",
     "electron-is-dev": "^2.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier-eslint": "^13.0.0",
     "wait-on": "^6.0.0"
   }
 }
