--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rabbitype",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://greta.github.io/rabbitype",
   "author": {
     "name": "Absurd"
   },
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.27",
     "@types/styled-components": "^5.1.14",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
@@ -24,7 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "electron": "wait-on tcp:3000 && electron .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
