--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
+    "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
@@ -29,12 +30,6 @@
     "electron": "wait-on tcp:3000 && electron .",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -51,15 +46,10 @@
   "devDependencies": {
     "@types/lodash": "^4.14.184",
     "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
     "concurrently": "^7.2.1",
     "electron": "^23.1.3",
     "electron-is-dev": "^2.0.0",
-    "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0",
     "gh-pages": "^4.0.0",
-    "prettier-eslint": "^15.0.1",
     "wait-on": "^6.0.1"
   }
 }
